--- a/UD5A4 - Horario SassAnimaciones_JoseLuisTarragaSegura_2DAW/Sass/style.scss
+++ b/UD5A4 - Horario SassAnimaciones_JoseLuisTarragaSegura_2DAW/Sass/style.scss
@@ -1,4 +1,4 @@
-@mixin assignaturas($imagen, $texto,$position){
+@mixin assignaturas($imagen, $texto,$position,$animacion){
     background-image: url($imagen);
     background-position: $position;
     background-repeat: no-repeat;
@@ -7,6 +7,15 @@
         content: $texto;
         background-color: rgba(0, 0, 0, 0.6);
         padding: 2px;
+    }
+    &:hover{
+        animation-name: ocultacion-img, $animacion;
+        animation-duration: 4s;
+        animation-timing-function: linear;
+    }
+    &:hover::before{
+        content: '';
+        background-color: rgba(0,0,0,0);
     }
 }
 
@@ -69,37 +78,37 @@ tr:not(:first-child)>th:not(:first-child){
     border: solid 1px black;
 }
 .godOf{
-    @include assignaturas('https://m.media-amazon.com/images/I/81eIPZLdAaL._AC_UF1000,1000_QL80_.jpg','God Of War 2',top center)
+    @include assignaturas('https://m.media-amazon.com/images/I/81eIPZLdAaL._AC_UF1000,1000_QL80_.jpg','God Of War 2',top center,godOfWar)
 }
 .pokemon{
-    @include assignaturas('https://upload.wikimedia.org/wikipedia/commons/thumb/9/98/International_Pok%C3%A9mon_logo.svg/1280px-International_Pok%C3%A9mon_logo.svg.png','Pokemon', center)
+    @include assignaturas('https://upload.wikimedia.org/wikipedia/commons/thumb/9/98/International_Pok%C3%A9mon_logo.svg/1280px-International_Pok%C3%A9mon_logo.svg.png','Pokemon', center,pokemon)
 }
 .assasins{
-    @include assignaturas('https://m.media-amazon.com/images/I/61fw7I5VRRL._AC_UF1000,1000_QL80_.jpg','Assasins Creed',top center)
+    @include assignaturas('https://i.blogs.es/6e03e1/mirage-/450_1000.webp','Assasins Creed',top center,assasins)
 }
 .spiderman{
-    @include assignaturas('https://addons-media.operacdn.com/media/CACHE/images/themes/95/123395/1.0-rev1/images/d40b13ad-9468-4ebd-8a47-8a8ac1ee783b/66e4435cda17193b5b419081112e33dd.jpg','Spiderman',top center)
+    @include assignaturas('https://addons-media.operacdn.com/media/CACHE/images/themes/95/123395/1.0-rev1/images/d40b13ad-9468-4ebd-8a47-8a8ac1ee783b/66e4435cda17193b5b419081112e33dd.jpg','Spiderman',top center,spiderman)
 }
 .rached{
-    @include assignaturas('https://i.pinimg.com/550x/1e/03/d2/1e03d2970d5996a154c5750018f7fb0c.jpg','Rached and Clank',top center)
+    @include assignaturas('https://i.pinimg.com/550x/1e/03/d2/1e03d2970d5996a154c5750018f7fb0c.jpg','Rached and Clank',top center,rached)
 }
 .ghost{
-    @include assignaturas('https://media.es.wired.com/photos/6467a3fda566376ee967bc69/16:9/w_2560%2Cc_limit/GhostOfTsushima.jpeg','Ghost of tsushima',top center)
+    @include assignaturas('https://media.es.wired.com/photos/6467a3fda566376ee967bc69/16:9/w_2560%2Cc_limit/GhostOfTsushima.jpeg','Ghost of tsushima',top center,pokemon)
 }
 .stray{
-    @include assignaturas('https://cdn.cloudflare.steamstatic.com/steam/apps/1332010/capsule_616x353.jpg','Stray',top center)
+    @include assignaturas('https://cdn.cloudflare.steamstatic.com/steam/apps/1332010/capsule_616x353.jpg','Stray',top center,pokemon)
 }
 .youtube{
-    @include assignaturas('https://www.youtube.com/img/desktop/yt_1200.png','Youtube',top center)
+    @include assignaturas('https://www.youtube.com/img/desktop/yt_1200.png','Youtube',top center,pokemon)
 }
 .video{
-    @include assignaturas('https://grupoaudiovisual.com/wp-content/uploads/2020/06/VFX-FX-Visual-Effects-Edicion-y-montaje-grupoaudiovisual.jpg','Edición de video',top center)
+    @include assignaturas('https://grupoaudiovisual.com/wp-content/uploads/2020/06/VFX-FX-Visual-Effects-Edicion-y-montaje-grupoaudiovisual.jpg','Edición de video',top center,pokemon)
 }
 .patreon{
-    @include assignaturas('https://1000logos.net/wp-content/uploads/2021/05/Patreon-logo-2013.png','Patreon', center)
+    @include assignaturas('https://1000logos.net/wp-content/uploads/2021/05/Patreon-logo-2013.png','Patreon', center,pokemon)
 }
 .instagram{
-    @include assignaturas('https://upload.wikimedia.org/wikipedia/commons/thumb/2/2a/Instagram_logo.svg/1280px-Instagram_logo.svg.png','Instagram',center)
+    @include assignaturas('https://upload.wikimedia.org/wikipedia/commons/thumb/2/2a/Instagram_logo.svg/1280px-Instagram_logo.svg.png','Instagram',center,pokemon)
 }
 .hora-de-comer{
     background-color: rgb(253, 0, 42);
@@ -113,20 +122,81 @@ tr:not(:first-child)>th:not(:first-child){
         animation-timing-function: ease;
     }
 }
-@keyframes hora-de-comer {
+
+
+@keyframes godOfWar {
+    from{
+        background-position: top center;
+    }
+    to{
+        background-position: bottom center;
+    }
+}
+@keyframes pokemon {
+    from{
+        background-position-x: -100%;
+    }
+    to{
+        background-position-x: 200%;
+    }
+}
+@keyframes spiderman {
+    to{
+       
+    }
+}
+@keyframes rached {
+    from{
+        filter: none;
+    }
+    to{
+        filter: invert(150%);
+    }
+}
+@keyframes assasins {
     0%{
+        mask-image: radial-gradient(circle, black 50%, rgba(0, 0, 0, 0.5) 90%);
+    }
+    25%{
+        mask-image: radial-gradient(circle, black 50%, rgba(0, 0, 0, 0.5) 85%);
+    }
+    50%{
+        mask-image: radial-gradient(circle, black 50%, rgba(0, 0, 0, 0.5) 80%);
+    }
+    75%{
+        mask-image: radial-gradient(circle, black 50%, rgba(0, 0, 0, 0.5) 75%);
+    }
+    100%{
+        mask-image: radial-gradient(circle, black 50%, rgba(0, 0, 0, 0.5) 70%);
+    }
+}
+
+
+@keyframes ocultacion-img {
+    from{
+        transform: scale(100%);
+    }
+    to{
+        transform-origin: top;
+        transform: scale(120%) translateY(10px);
+    }
+}
+
+
+@keyframes hora-de-comer {
+    0%,19%{
         background-color: rgb(253, 0, 42);
     }
-    20%{
+    20%,39%{
         background-color: aqua;
     }
-    40%{
+    40%,59%{
         background-color: greenyellow;
     }
-    60%{
+    60%,79%{
         background-color: red;
     }
-    80%{
+    80%,99%{
         background-color: orange;
     }
     100%{
