--- a/UD5A4 - Horario SassAnimaciones_JoseLuisTarragaSegura_2DAW/stylesheets/style.css
+++ b/UD5A4 - Horario SassAnimaciones_JoseLuisTarragaSegura_2DAW/stylesheets/style.css
@@ -397,11 +397,18 @@ tr:not(:first-child) > th:not(:first-child) {
   }
 }
 @keyframes stray {
-  0% {
-    mask-size: 150%;
+  from {
+    -webkit-mask-image: url("../img/Stray.png");
+    -webkit-mask-size: 200%;
+    -webkit-mask-repeat: no-repeat;
+    -webkit-mask-position: center;
+    -webkit-mask-mode: luminance;
   }
-  100% {
-    mask-size: 100%;
+  to {
+    -webkit-mask-image: url("../img/Stray.png");
+    -webkit-mask-repeat: no-repeat;
+    -webkit-mask-position: center;
+    -webkit-mask-size: 60%;
   }
 }
 @keyframes youtube {
