--- a/Proyecto segunda evaluación 23-24_JoséLuisTárragaSegura/Sass/playaParadisiaca.scss
+++ b/Proyecto segunda evaluación 23-24_JoséLuisTárragaSegura/Sass/playaParadisiaca.scss
@@ -36,7 +36,19 @@ main{
             &>h1{
                 font-family: $letra-titulos-secundarios;
             }
-            &>div>div{
+            &>div:nth-child(2){
+                color: white;
+                &>div{
+                    &>h3{
+                        color: black;
+                        font-family: $letra-titulos-plano-2;
+                    }
+                    &>div{
+                        font-family: $letra-titulos-plano;
+                    }
+                }
+            }
+            &>div:nth-child(3)>div{
                 background-color: rgb(228, 173, 35);
                 max-width: 450px;
                 height: 500px;
@@ -47,13 +59,14 @@ main{
                     transition: 0.2s;
                 }
             }
-            &>div>div>img{
+            &>div:nth-child(3)>div>img{
                 width: 450px;
                 height: 350px;
-                &~h4{
+                &~h4>a{
                     font-family: $letra-titulos-plano-2;
                     font-weight: 400;
                     color: black;
+                    text-decoration: none;
                     cursor: pointer;
                     &:hover{
                         text-decoration: underline;
