--- a/Proyecto segunda evaluación 23-24_JoséLuisTárragaSegura/Sass/style.scss
+++ b/Proyecto segunda evaluación 23-24_JoséLuisTárragaSegura/Sass/style.scss
@@ -5,14 +5,14 @@ $letra-titulos-plano-2: "Roboto Slab", serif;
 $letra-titulos-secundarios:"Gowun Batang", serif;
 $color-header-letra: rgb(53, 53, 53);
 $color-header-letra-hover: rgb(0, 0, 0);
-
+$h: height;
 main{
     &>article:nth-child(1){
         position: relative;
         z-index: 2;
         position: relative;
         &>section{
-            height: 100vh;
+            #{$h}: 100vh;
             &:nth-child(1){
                 background-color: white;
                 &>h2{
@@ -34,7 +34,7 @@ main{
                 }
             }
             &:nth-child(3){
-                height: fit-content;
+                #{$h}: fit-content;
                 &>i{
                     opacity: 0;
                     position: absolute;
@@ -60,9 +60,9 @@ main{
         }
     }
     &>article:nth-child(2){
-        min-height: 80vh;
+        min-#{$h}: 80vh;
         &>section{
-            height: 60%;
+            #{$h}: 60%;
             font-family: $letra-titulos-plano;
             &>div{
                 width: 300px;
@@ -71,7 +71,7 @@ main{
         }
     }
     &>article:nth-child(3)>section{
-        min-height: 80vh;
+        min-#{$h}: 80vh;
         grid-template-columns: 50% 50%;
         row-gap: 20px;
         &>div{
