--- a/Proyecto segunda evaluación 23-24_JoséLuisTárragaSegura/stylesheets/reserva.css
+++ b/Proyecto segunda evaluación 23-24_JoséLuisTárragaSegura/stylesheets/reserva.css
@@ -30,6 +30,37 @@ select {
   background-color: white;
   border: solid 3px black;
   font-family: "Roboto", sans-serif;
+  height: 70px;
+}
+
+.diaOcupado {
+  background-color: gray;
+  color: white;
+}
+
+.calendario {
+  width: 300px;
+}
+
+.dias > div {
+  width: 14.28%;
+}
+.dias:nth-child(3) > div:not(.diaOcupado):hover {
+  box-shadow: var(--bs-box-shadow) !important;
+}
+
+.cursor-pointer {
+  cursor: pointer;
+  color: gray;
+}
+.cursor-pointer:hover {
+  color: rgb(0, 0, 0);
+}
+
+.hoy {
+  background-color: blue;
+  border-radius: 50%;
+  color: white;
 }
 
 /*# sourceMappingURL=reserva.css.map */
